--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 <br>
                                 <h2 style="color:grey; font-size:25px">PhD Candidate</h2>
                                 <br>
-                                <a style="color:#EF233C" href="https://www.uphf.fr/LAMIH/fr">LAMIH, UPHF</a>
+                                <a style="color:#15c" href="https://www.uphf.fr/LAMIH/fr">LAMIH, UPHF</a>
                                 <ul class="network-icon" aria-hidden="true">
     
                                     <li>
@@ -413,7 +413,7 @@
             </div>
           </div>
 
-          <div class="modal fade" id="rl" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+          <div class="modal fade" id="tv" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
