--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                 </div>
                                 <p>
                                     We present a new pairwise loss to train a surrogate model to accurately rank the deep learning architectures. We use this surrogate model to accelerate NAS algorithms from evolutionary algorithms to reinforcement learning. </p>
-                                <a class="btn" href="">Paper<i class="fa fa-angle-right"></i></a>
+                                <a class="btn" href="https://camps.aptaracorp.com/ACM_PMS/PMS/ACM/ARABWIC2021/22/e6322175-1293-11ec-b613-166a08e17233/OUT/arabwic2021-22.html">Paper<i class="fa fa-angle-right"></i></a>
                                 <a class="btn" href="https://docs.google.com/presentation/d/1GhBJs5OMg4QKZvA6Rw9FH7GQr1v0FmXmJn8SFtsgOyk/edit?usp=sharing">Presentation<i class="fa fa-angle-right"></i></a>
                                 <a class="btn" href="https://github.com/IHIaadj/ranked_nas">Code<i class="fa fa-angle-right"></i></a>
                                 
