fix discord link

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             Each week, I host a reading session 😀 ! Join us on this discord workspace. 
                             <br>
                             <br>
-                            <a href="https://discord.gg/n8BKXuCam2"><img src="img/discord.png"/></a>
+                            <a href="https://discord.gg/RXbFdnn65d"><img src="img/discord.png"/></a>
                             </p>
                         </div>
                     </div>
